Create base schema

--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,3 @@
 DATABASE_URL="file:./dev.db"
+CLERK_PUBLISHABLE_KEY=pk_test_••••••••••••••••••••••••••••••••••••••••••
+CLERK_SECRET_KEY=sk_test_••••••••••••••••••••••••••••••••••••••••••
