--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "typecheck": "tsc"
   },
   "dependencies": {
+    "@clerk/remix": "^2.6.15",
+    "@prisma/client": "^4.16.1",
     "@remix-run/css-bundle": "^1.18.0",
     "@remix-run/node": "^1.18.0",
     "@remix-run/react": "^1.18.0",
