--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@clerk/remix": "^2.6.15",
+    "@headlessui/react": "^1.7.15",
     "@prisma/client": "^4.16.1",
     "@remix-run/css-bundle": "^1.18.0",
     "@remix-run/node": "^1.18.0",
